[project]
name = "vllm-autoserve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jason Mancuso", email = "7891333+jvmncs@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.2",
    "modal>=1.1.4",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
modal-fetcher = [
    "huggingface-hub>=0.35.3",
]
modal-server = [
    "vllm>=0.11.0",
]
